<resources>
    <string name="app_name">Stravomatic</string>
    <string name="pref_title_enable_bike_detection">Bicycling detection</string>
    <string name="pref_summary_enable_bike_detection">Automatically start Strava activities if bicycling is detected</string>
    <string name="pref_title_enable_run_detection">Running detection</string>
    <string name="pref_summary_enable_run_detection">Automatically start Strava activities if running is detected</string>
    <string name="pref_title_detection_interval">Detection interval</string>
    <string name="pref_summary_detection_interval">Check for movement every %s</string>
    <string name="pref_title_stop_timeout">Stop activity timeout</string>
    <string name="pref_summary_stop_timeout">Stop Strava activity after %s with no movement</string>
    <string name="pref_title_detection_threshold">Detection threshold</string>
    <string name="pref_summary_detection_threshold">Start activity if the detection is more than %s accurate</string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="pref_summary_vibrate">Vibrate when starting or stopping Strava</string>
    <string name="pref_title_battery_whitelist">Battery usage</string>
    <string name="pref_summary_battery_whitelist">Stravomatic works better when exempted from battery optimisation. Click here to whitelist it.</string>
    <string name="detection_started">Detection enabled</string>
    <string name="notification_details">(every %s, %s fiability)</string>
    <string name="strava_started_at">Strava started at %s</string>
    <string name="strava_not_found">Could not start Strava</string>
    <string name="movement_bicycling">Bicycling since %s</string>
    <string name="movement_running">Running since %s</string>
    <string name="movement_in_vehicle">In vehicle since %s</string>
    <string name="movement_still">Still since %s</string>
    <string name="movement_walking">Walking since %s</string>
    <string name="movement_on_foot">On foot since %s</string>
    <string name="stop_strava_now">Stop Strava now</string>
    <string name="pref_title_show_activity">Show Strava when starting</string>
    <string name="pref_title_system_modal">Allow overlay</string>
    <string name="pref_summary_system_modal">Stravomatic needs the overlay permission to be able to start Strava. Click here to grant it.</string>
</resources>
