<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_bike_detection"
        android:summary="@string/pref_summary_enable_bike_detection"
        android:title="@string/pref_title_enable_bike_detection" />
    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:key="enable_run_detection"
        android:summary="@string/pref_summary_enable_run_detection"
        android:title="@string/pref_title_enable_run_detection" />
    <ListPreference
        android:defaultValue="60"
        android:entries="@array/detection_interval_entries"
        android:entryValues="@array/detection_interval_values"
        android:key="_detection_interval"
        android:summary="@string/pref_summary_detection_interval"
        android:title="@string/pref_title_detection_interval" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="900"
        android:entries="@array/stop_timeout_entries"
        android:entryValues="@array/stop_timeout_values"
        android:key="_stop_timeout"
        android:summary="@string/pref_summary_stop_timeout"
        android:title="@string/pref_title_stop_timeout" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="75"
        android:entries="@array/detection_threshold_entries"
        android:entryValues="@array/detection_threshold_values"
        android:key="_detection_threshold"
        android:summary="@string/pref_summary_detection_threshold"
        android:title="@string/pref_title_detection_threshold" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="vibrate"
        android:summary="@string/pref_summary_vibrate"
        android:title="@string/pref_title_vibrate" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
